tests/NormalTests/paczka1/small_fuzzy/96151888.err
Error in line 3: QkyHg A650 39,5
Error in line 6: X17q S420 76,7
Error in line 5: uCnW A363 49,2
